--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.3",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.1.3",
